--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio-2020",
   "version": "0.1.0",
   "private": true,
+  "main": "public/index.html",
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
