--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio-2020",
   "version": "0.1.0",
   "private": true,
-  "main": "public/index.html",
+  "homepage": "https://strangegalaxy.github.io/sidportfolio/",
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
@@ -34,7 +34,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "yarn build && cp build/index.html build/404.html",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
